Changelog
=========

4.3-dev - (unreleased)
----------------------

4.2 - (2011-11-29)
------------------
* Bug fix: Fixed to work also when keywords are required. Pre-populate also with
  new tags
  [voineali #4773 (EEA)]

4.1 - (2011-11-18)
------------------
* Rerelease broken egg

4.0 - (2011-11-18)
------------------
* Plone 4+ compatible version
  [avoinea]

1.0 - (2011-10-04)
------------------
* Initial release
