@@ -10,3 +10,7 @@
 div.token-input-dropdown-facebook ul li {
   display: block;
 }
+
+div li.token-input-input-token-facebook {
+    list-style: none;
+}
